Add: get deploy by deploy id.
