# metal-server/src/main/java/org/metal/server/Gateway.java
@@ -271,6 +271,12 @@ public class Gateway extends AbstractVerticle {
         .handler(JWTAuthHandler.create(this.auth.getJwtAuth()))
         .handler(project::getBackendStatus);
 
+    router.get("/api/v1/projects/deploy/:deployId")
+        .produces("application/json")
+        .handler(BodyHandler.create())
+        .handler(JWTAuthHandler.create(this.auth.getJwtAuth()))
+        .handler(project::getDeploy);
+
     router.put("/api/v1/projects/deploy/:deployId")
         .produces("application/json")
         .handler(BodyHandler.create())
